[gd_scene load_steps=4 format=3 uid="uid://bhgsu65owsx00"]

[ext_resource type="Script" path="res://person.gd" id="1_b4xpy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6kcdf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3rqv"]

[node name="Person" type="CharacterBody2D"]
script = ExtResource("1_b4xpy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 20.0
debug_enabled = true

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6kcdf")

[node name="Infektion_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Infektion_area"]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_r3rqv")

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Infektion_area" to="." method="_on_infektion_area_body_entered"]
